test_datasets/generated/syntax_errors/error_5.py
def compare(a, b):
    if a => b:  # ERROR: Invalid operator (should be >=)
        return True
    return False
